--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
 
     <!-- link your javascript files here. (Must be after jquery is linked!
       You should be able to explain why that is to be "employer ready".) -->
-      <script src="./develop/javascript.js"></script>
+      <script src="./develop/script.js"></script>
   </body>
 </html>
