--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
