--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-    /> -->
-    <link rel="stylesheet" href="./develop/style.css" />
+    />
+    <link rel="stylesheet" href="./Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -116,6 +116,6 @@
       You should be able to explain why that is to be "employer ready".) -->
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-      <script src="./develop/script.js"></script>
+      <script src="./Develop/script.js"></script>
   </body>
 </html>
